demo/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app.kubernetes.io/name: app
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - app.home.arpa
    secretName: app-cert
  rules:
  - host: app.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8082
